<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <PreferenceCategory android:title="@string/txt_setting_profile" >
        <EditTextPreference
            android:key="prefUsername"
            android:title="@string/txt_setting_user_name"
            android:summary="@string/txt_setting_user_name_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/txt_setting_bt" >
        <PreferenceScreen
                android:title="@string/txt_setting_enable_bt"
                android:summary="@string/txt_setting_enable_bt_summary">
            <intent 
                android:action="android.settings.BLUETOOTH_SETTINGS"/>
        </PreferenceScreen>
        <ListPreference
            android:key="prefPairing"
            android:title="@string/txt_setting_pair"
            android:entries="@array/prefParing"
            android:entryValues="@array/prefParingValues"
            android:summary="@string/txt_setting_pair_summary"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/txt_setting_dev" >
        <CheckBoxPreference
            android:key="prefEnableDev"
            android:defaultValue="false"
            android:title="@string/txt_setting_enable_dev" 
            android:summary="@string/txt_setting_enable_dev_summary">
        </CheckBoxPreference>
        <EditTextPreference
            android:key="prefIpAdress"
            android:defaultValue="192.168.0.40"
            android:dependency="prefEnableDev"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/txt_setting_ipadress" 
            android:summary="@string/txt_setting_ipadress_summary"/>
        <EditTextPreference
            android:key="prefPort"
            android:defaultValue="28500"
            android:dependency="prefEnableDev"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/txt_setting_port" 
            android:summary="@string/txt_setting_port_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/txt_setting_other" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSendReport"
            android:title="@string/txt_setting_send_report" 
            android:summary="@string/txt_setting_send_report_summary">
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>