<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

        <item
        android:id="@+id/ForestView"
        android:orderInCategory="96"
        android:showAsAction="always"
        android:icon="@drawable/ico_forest"
        android:title="@string/MenuIconString_ForrestView"/>
            
        <item
        android:id="@+id/DrivingView"
        android:orderInCategory="97"
        android:showAsAction="always"
        android:icon="@drawable/ico_drive"
        android:title="@string/MenuIconString_DriveView"/>
        
        <item android:id="@+id/SocialView" 
        android:title="@string/MenuIconString_SocialView"
        android:showAsAction="always"
        android:icon="@drawable/ico_social"
        android:orderInCategory="98"/>
        
        <item android:id="@+id/MarketView" 
        android:title="@string/MenuIconString_MarketView"
        android:showAsAction="always"
        android:icon="@drawable/ico_market"
        android:orderInCategory="99"/>
        <item android:id="@+id/action_comm_test" android:orderInCategory="99" android:title="@string/action_comm_test" android:showAsAction="never"></item>
        
</menu>